<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Devoir</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">Devoir</string>
    <string name="jump_to_date">Jump to Date</string>
    <string name="logout">Log Out</string>
    <string name="filter_tasks">Filter Tasks</string>
    <string name="add_feed">Add Feed</string>
    <string name="google_log_in_flag">oauthFlag</string>
    <string name="action_hide">hide</string>
    <string name="add_course">Add Course</string>
    <string name="course_name">Course Name</string>
    <string name="add_ical_feed">Add iCal Feed&#8230;</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
</resources>
