<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".TaskActivity"
    android:orderInCategory="100">

    <item
        android:id="@+id/action_jump_to_date"
        android:icon="@drawable/ic_action_go_to_today"
        android:title="@string/jump_to_date"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_filter"
        android:icon="@drawable/ic_fa_filter"
        android:title="@string/filter_tasks"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_add_feed"
        android:icon="@drawable/ic_action_new"
        android:title="@string/add_feed"
        app:showAsAction="ifRoom" />

</menu>
